<resources>
    <string name="app_name">CustomViewExample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="word_first">Word_First </string>
    <string name="word_second">Word_Second </string>
    <string name="word_third">Word_Third </string>
    <string name="word_ok">Ok</string>
    <string name="word_dog1">Dog1</string>
    <string name="word_dog2">Dog2</string>

    <!-- item   -->
    <string name="item_first">CustomView</string>
    <string name="item_second">ConstraintLayout</string>
    <string name="item_third">Listener</string>
    <string name="item_login">Login</string>
    <string name="item_tips">Tips</string>

    <string name="listener_button">button</string>
    <string name="listener_post_num_1">000</string>
    <string name="listener_post_num_2">0000</string>
    <string name="listener_radio1">radio1</string>
    <string name="listener_radio2">radio2</string>
    <string name="listener_seeker_init">0</string>

    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login">Login</string>
    <string name="login_link_sign_up">No account yet?</string>
    <string name="login_Authenticating">Authenticating.</string>


</resources>