<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomViewExampleFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/firstItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_first"
                android:textSize="14sp"
                android:layout_marginVertical="8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/secondItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_second"
                android:textSize="14sp"
                android:layout_marginVertical="8dp"  />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/thirdItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_third"
                android:textSize="14sp"
                android:layout_marginVertical="8dp"  />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_login"
                android:textSize="14sp"
                android:layout_marginVertical="8dp"  />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>